# 2019-Programming-Basics-C-

./: README.md
02 Welcome to Beijing/: main.c
05简单的 printf 和 scanf/: main.c
06【入门】整数比大小/: main.c
08【中学】计算圆柱的侧面积及体积/: main.c
1-8-2opReload/: CMakeLists.txt  main.cpp
1-8sort/: CMakeLists.txt  main.cpp
10-2calc/: CMakeLists.txt  main.c
10trianglejudege【中学】判断三角形的形状/: CMakeLists.txt  main.c
11ClockAngle【中学】计算时钟的夹角/: main.c
12【入门】大小写字母转换/: main.c
15计算生日还有几天/: main.c
16DateForWeek/: CMakeLists.txt  main.c
17blackFri【小学五年级】再算星期/: main.c
18Mother'sDay【小学五年级】确定母亲节编程练习/: CMakeLists.txt  main.c
19maxPrime/: CMakeLists.txt
19maxPrime【小学生】找出最大素数/: main.c
20-5-20c++practice/: CMakeLists.txt  main.cpp
20-5-26-hyc/: CMakeLists.txt  main.cpp
20-6-11stuMan/: CMakeLists.txt  IdGenerator.h  Score.h  Student.cpp  Student.h  main.cpp
20-6-13-hyc/: CMakeLists.txt
20-6-3-hyc-1/: CMakeLists.txt
20-6-5-phone/: main.cpp
20-6-7ekg/: CMakeLists.txt  main.cpp
20-6-7test/: CMakeLists.txt  main.cpp
20_6_10stuMan_origin/: CMakeLists.txt
20_7_3_Cow_Lineup/: CMakeLists.txt  main.cpp
20_7_3_Cow_Lineup_Internet/: main.cpp
20_7_4_milk_routing/: main.cpp
20_7_4wifi_setup/: CMakeLists.txt
20_7_5_p3/: CMakeLists.txt  main.cpp
20_7_5_p5/: CMakeLists.txt
20_7_5_p6/: CMakeLists.txt  main.cpp
20_7_5_p7/: main.cpp
20numeratorCalc/: CMakeLists.txt
20numeratorCalc分数的四则运算编程练习/: main.c
20work/: main.c  (+1 more)
Test C course/1. feladat/lesson1/task1/: CMakeLists.txt  task-remote-info.yaml  task.html
Test C course/1. feladat/lesson1/task1/test/: test.cpp
(+392 files in other folders)
